     2.3.0  TBD...

     FIXED: Incorrect handling of decimal values in LNB LO frequency.
     FIXED: Correctly apply initial LNB LO frequency.
     FIXED: Audio output device selection on Mac OS X.


     2.2.0  Released August 8, 2013

       NEW: Official Ubuntu PPA and Mac OS X app bundle.
       NEW: Allow using audio output devices other than the default.
       NEW: Automatic I/Q phase and gain correction (requires gr-iqbal).
       NEW: Qt 5 support.
       NEW: GNU Radio 3.7 support.
       NEW: HackRF Jawbreaker support.
       NEW: Funcube Dongle Pro+ support.
       NEW: Option to select antenna connector on e.g. USRP devices.
       NEW: Configuration option to choose location of WAV recordings.
       NEW: Uses gr-audio as default on all platform (pulseaudio still possible).
       NEW: Command line option to remove configuration file.
       NEW: Command line option to launch I/O device editor before application.
     FIXED: Frequency control widget with recent Qt was broken.
     FIXED: Bug that caused audio FFT data to be leaked into the I/Q FFT.
     FIXED: Audio recording & playback.
     FIXED: Proper handling of frequencies above 2147483647 Hz. 
  IMPROVED: Y-axis panning (click-and-drag).
  IMPROVED: Rescale waterfall when resizing the main window.
  IMPROVED: gr-audio support on Linux.
  IMPROVED: Audio gain setting no longer has impact on WAV recording.


   2.1.251  Released on March 1, 2013

     FIXED: Incorrect device selection in config dialog.


   2.1.246  Released on February 29, 2013

       NEW: I/Q swapping option.
       NEW: FFT video filter with non-linear gain (still WIP).
       NEW: Save and restore FFT settings.
       NEW: Save and restore receiver options (offset, mode and squelch level).
       NEW: AM DC removal using IIR filter.
     FIXED: Removed graphics redraw delay when changing frequency or demodulator.
     FIXED: Respect RF frequency range of input device.